--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
+# non default server port
 server.port=8081
+
+# use our own security
 security.basic.enabled=false
+
+# disable caching for development
 spring.thymeleaf.cache=false
+
+# create the db every time
+spring.jpa.hibernate.ddl-auto=update
+
+# don't need to be that verbose
+spring.jpa.show-sql=false
