Admin pages, styling, home page edits

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
 			<artifactId>thymeleaf-layout-dialect</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity3</artifactId>
+		</dependency>
+		
 		<!--  for real mysql db see application props-->
 		<dependency>
 			<groupId>mysql</groupId>
