--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # non default server port
 server.port=8081
 
+server.context_path=/holidaycards
+
 # use our own security
 security.basic.enabled=false
 
