--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -7,3 +7,5 @@ spring.datasource.url=jdbc\:mysql\://192.168.0.3\:3306/holidaycards?autoReconnec
 spring.datasource.username=holidaycards
 spring.datasource.password=holidaycards
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.testOnBorrow=true
+spring.datasource.validationQuery=SELECT 1
