--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -3,7 +3,7 @@
 # don't create the db every time
 spring.jpa.hibernate.ddl-auto=validate
 
-spring.datasource.url=jdbc\:mysql\://192.168.0.3\:3306/holidaycards?autoReconnect=true
+spring.datasource.url=jdbc\:mysql\://database.fawnanddoug.com\:3306/holidaycards?autoReconnect=true
 spring.datasource.username=holidaycards
 spring.datasource.password=holidaycards
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
